Fix alignment of text and icons

--- a/src/popup/components/icon/icon.css
+++ b/src/popup/components/icon/icon.css
@@ -1,3 +1,7 @@
 .icon {
   color: var(--icon-normal-fill);
 }
+
+.icon svg {
+  display: block;
+}
